# airflow-custom-operators

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: teste.py
operators/bigquery_to_gcs/: README.md  bigquery_to_gcs.py
